# CarbonBorderOS

./: CONTRIBUTING.md  LICENSE  PROJECT_BRIEF.md  README.md  app.py  ci.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
carbonborderos/: config.py  connectors.py  cost.py  data_loader.py  dictionary.py  material_advisor.py  pipeline.py  reporting.py  risk.py  scope.py
data/: cbam_cn_prefixes.csv  company_dictionary.csv  default_factors.csv  import_template.csv  material_substitution.csv  sample_imports.csv
tests/: test_core.py
