[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "carbonborderos"
version = "0.1.0"
description = "Live CBAM intelligence platform for EU import exposure, supplier risk, and carbon-cost simulation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.36",
    "pandas>=2.1",
    "numpy>=1.26",
    "plotly>=5.22",
    "scikit-learn>=1.4",
    "openpyxl>=3.1",
    "xlsxwriter>=3.2",
    "requests>=2.32",
    "python-dateutil>=2.9",
    "rapidfuzz>=3.9",
    "networkx>=3.3",
    "pycountry>=24.6.1",
]

[tool.setuptools.packages.find]
include = ["carbonborderos*"]
